--- a/themes/bootstraptheme/less/bootstraptheme.less
+++ b/themes/bootstraptheme/less/bootstraptheme.less
@@ -1,3 +1,7 @@
 span.required {
-	color:#ff0000;
+	color : #ff0000;
+}
+
+.fixedmenu {
+	margin-top : @menu_height+px;
 }
